<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backToMainMenuBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabCustomSize="32dp"
            android:layout_gravity="top|start"
            android:scaleType="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorLightCyan"
            app:backgroundTint="@color/colorLightCyan"
            app:srcCompat="@drawable/ic_arrow_left"
            app:borderWidth="2dp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/colorPrimary"
                android:src="@drawable/ic_cogs"
                android:contentDescription="@string/settingsIconDescription"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_text"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
        />

        <TextView
                android:id="@+id/playlistStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="4sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="12sp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/playlistSettingHeader"
                    android:layout_marginTop="4sp"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="7sp"
            />

            <ImageView
                    android:id="@+id/enablePlaylistBtn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorPrimary"
                    android:src="@drawable/ic_check_circle"
                    android:contentDescription="@string/enableIconDescription"
                    android:visibility="gone"
            />

            <ImageView
                    android:id="@+id/disablePlaylistBtn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorRed"
                    android:src="@drawable/ic_times_circle"
                    android:contentDescription="@string/disableIconDescription"
                    android:visibility="gone"
            />
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:textSize="12sp"
                android:text="@string/playlistSettingDescription"
        />

        <Button
                android:id="@+id/wipeSongsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginStart="17sp"
                android:layout_marginEnd="20sp"
                android:text="@string/wipeDataBtnText"
                android:backgroundTint="@color/colorRed"
                android:textColor="@color/colorWhite"
        />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>