<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:padding="3dp"
                android:src="@drawable/ic_guitar"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:tint="@color/colorPrimary"
                android:layout_gravity="center"
                android:contentDescription="@string/addArtistIconDescription"/>

        <EditText
                android:id="@+id/bandDialogName"
                android:hint="@string/addArtistDialogHint"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="1">
            <Button
                    android:id="@+id/bandDialogAddBtn"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:text="@string/bandDialogAddBtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
            <Button
                    android:id="@+id/bandDialogCancelBtn"
                    android:text="@string/cancelBtn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"/>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>